# SharedMemory

Android/: ion.cpp  shared.cpp
Android/android_aoi/: CMakeLists.txt  note.md
Android/android_aoi/ais_client/: CMakeLists.txt  ais_test.cpp  ais_test_bak.cpp  build.sh  get_libs.sh
Android/android_aoi/ais_client/inc/: AEEStdDef.h  AEEVaList.h  CameraResult.h  ais_api.h  ais_log.h  ais_module.h  alltypes.h  com_dtypes.h  gpio_client.h  gpio_devctl.h  pmem.h  qcarcam.h  qcarcam_diag_types.h  test_util_common.h  test_util_qnx.h
Android/android_aoi/docs/: design.md  user_guide.md
Android/android_aoi/include/: CameraHandle.h
Android/android_aoi/src/: CameraHandle.cpp  main.cpp
Linux/: POSIX_client  POSIX_client.cpp  POSIX_server  POSIX_server.cpp  SystemV.cpp
QNX/: shared.cpp
QNX/qnx_byd/: CMakeLists.txt  login_qnx.sh  note.txt  run.sh
QNX/qnx_byd/BYDD9/scripts/: build.sh
QNX/qnx_byd/dms_algo/: env.sh
QNX/qnx_byd/dms_algo/config/: fusion_logic_config.json  license.lic  module_config.json  plugin_config.json
QNX/qnx_byd/dms_algo/config/distraction_cfg/: anchors20220902.xyz  anchors20221213-Force.xyz  camera_bydmr.json  camera_dms.json  gaze_param.json  head3d_param.json
QNX/qnx_byd/dms_algo/include/: MDmsStatus.h  MImageHelper.h  SenseDriverCommon.h  matrix_macro.h  matrixsdk_common.h  matrixsdk_type.h  sensedriver_calibration.h  sensedriver_interface.h  sensedriver_type.h
QNX/qnx_byd/dms_algo/include/core/: common.h
QNX/qnx_byd/dms_algo/lib/: libad_nn.so.0.1  libc++.so.1  libc++abi.so.1  libsensedriver.so.4.1
QNX/qnx_byd/dms_algo/models/: MM_MME_EmotionMouth_Common_GRAY_M1.13_3.6.411.model  MM_MME_EyeFeature_Common_GRAY_M1.13_2.5.411.model  MM_MME_Eye_NIOa_GRAY_M1.13_7.7.411.model  MM_MME_FaceAlignHead_Common_GRAY_M1.13_5.8.411.model  MM_MME_FaceAttr_CN_BGR_M1.13_1.11.411.model  MM_MME_FaceHeadPose_Common_GRAY_A7.9.0_5.7.000.model  MM_MME_HOIDetFreecall_Gray_M1.13_1.1.411.model  MM_MME_HOIDet_Common_Gray_M1.13_1.4.411.model  MM_MME_MagiCube_DMS_Gray_M1.13_1.3.411.model  MM_Pattern_Head3d_Common_GRAY_H1.12_4.1.401.model  MM_SmartV_GazeLeftG_Common_GRAY_M1.13_4.28.411.model  MM_SmartV_GazeRightG_Common_GRAY_M1.13_4.28.411.model  MM_Smartv_GestureDynamic_Common_LmkList_M1.13_2.12.411.model  MM_Smartv_Gesture_Common_GRAY_M1.13_2.4.411.model  MM_Smartv_Smoke_Common_BGR_M1.13_3.17.411.model
QNX/qnx_byd/dms_algo/samples/: BlockQueue.hpp  CMakeLists.txt  Calibration.cpp  CameraOcclusion.cpp  DMS.cpp  DMS.json  DMS_customer.cpp  DMS_rotate.cpp  Distraction.cpp  Distraction.json  Distraction_customer.cpp  DriverMissing.cpp  Drowsiness.cpp  ImageReader.hpp  ParseJson.hpp  build.sh  hardware.hpp
QNX/qnx_byd/dms_algo/samples/tools/: env.sh  m_closewarning.cmake  toolchain.cmake  toolchain_android.cmake  toolchain_x86.cmake
QNX/qnx_byd/dms_algo/samples/tools/json11/: json11.cpp
QNX/qnx_byd/dms_algo/samples/tools/opencv/include/opencv2/: cvconfig.h
QNX/qnx_byd/dms_algo/samples/tools/opencv/lib/: libavdevice.so.58  libavfilter.so.7  libavformat.so.58  libavutil.so.56  libopencv_features2d.so.406  libopencv_flann.so.406  libopencv_highgui.so.406  libopencv_objdetect.so.406  libopencv_video.so.406  libopencv_videoio.so.406  libswresample.so.3  libswscale.so.5
QNX/qnx_byd/dms_algo/samples/tools/opencv/lib/pkgconfig/: opencv4.pc
QNX/qnx_byd/include/: CameraHandle.h  DmsManager.h  DmsResulPrinter.hpp  MessageService.hpp  PpsReader.h  PpsWriter.h  SocketServer.hpp  VehicleConfigManage.hpp
QNX/qnx_byd/include/common/: PpsDataType.h
QNX/qnx_byd/scripts/: build.sh
QNX/qnx_byd/smoke_test/: CMakeLists.txt  build.sh  dmsServerTest.cpp
QNX/qnx_byd/src/: CameraHandle.cpp  DmsManager.cpp  MessageService.cpp  PpsReader.cpp  PpsWriter.cpp  SocketServer.cpp  VehicleConfigManage.cpp  main.cpp
QNX/qnx_byd/test/ais_test/: CMakeLists.txt  ais_test.cpp  ais_test.cpp-bak
QNX/qnx_byd/test/oem_app_test/: common.mk
QNX/qnx_byd/test/oem_app_test/aarch64/le/: oem_app_test  oem_app_test.map  oem_app_test.pinfo
QNX/qnx_byd/test/oem_app_test/src/: main.c
QNX/qnx_byd/test/pps_test/: CMakeLists.txt  pub.cpp  pub.cpp_old  sub.cpp
